[gd_scene load_steps=4 format=2]

[ext_resource path="res://mini/za/images/one_more_slice.png" type="Texture" id=1]
[ext_resource path="res://mini/za/images/slice_of_za.png" type="Texture" id=2]
[ext_resource path="res://mini/za/scripts/za.gd" type="Script" id=3]

[node name="Za" type="Node2D"]
script = ExtResource( 3 )

[node name="Half1" type="Node2D" parent="."]

[node name="Quadrant1" type="Node2D" parent="Half1"]

[node name="Slice1" type="Sprite" parent="Half1/Quadrant1"]
position = Vector2( -30, -30 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="Slice2" type="Sprite" parent="Half1/Quadrant1"]
position = Vector2( -30, -30 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="Quadrant2" type="Node2D" parent="Half1"]

[node name="Slice1" type="Sprite" parent="Half1/Quadrant2"]
position = Vector2( -30, 30 )
rotation = 4.71239
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="Slice2" type="Sprite" parent="Half1/Quadrant2"]
position = Vector2( -30, 30 )
rotation = 4.71239
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="Half2" type="Node2D" parent="."]

[node name="Quadrant1" type="Node2D" parent="Half2"]

[node name="Slice1" type="Sprite" parent="Half2/Quadrant1"]
position = Vector2( 30, 30 )
rotation = 4.71239
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
flip_v = true

[node name="Slice2" type="Sprite" parent="Half2/Quadrant1"]
position = Vector2( 30, 30 )
rotation = 4.71239
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
flip_v = true

[node name="Quadrant2" type="Node2D" parent="Half2"]

[node name="Slice1" type="Sprite" parent="Half2/Quadrant2"]
position = Vector2( 30, -30 )
rotation = 1.5708
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="Slice2" type="Sprite" parent="Half2/Quadrant2"]
position = Vector2( 30, -30 )
rotation = 1.5708
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="NomTimer" type="Timer" parent="."]
wait_time = 0.1
[connection signal="timeout" from="NomTimer" to="." method="_on_NomTimer_timeout"]
